<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#273a69"
    tools:context=".Login_Page"


    >


    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="211dp"
        android:src="@drawable/icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signintitle"
        android:layout_below="@+id/icon"
        android:text="@string/evan"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_margin="25dp"
        />

    <EditText
        android:id="@+id/EmailLogIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signintitle"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/carved_border"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="20dp"
        android:hint="@string/e_mail"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:autofillHints=""
        android:inputType="textEmailAddress" />



    <EditText
        android:id="@+id/passwordLogIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/EmailLogIN"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/carved_border"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:autofillHints="" />

    <Button
        android:id="@+id/Log_INBtn"
        android:layout_width="178dp"
        android:layout_height="63dp"
        android:layout_below="@id/passwordLogIN"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#1b2a52"

        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="20sp"



        />
    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Log_INBtn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="10dp"
        android:text="Reset Password"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetPassword"
        android:layout_alignParentStart="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="10dp"
        android:text="@string/don_t_have_account"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/click_here"
        android:layout_width="128dp"
        android:layout_height="33dp"
        android:layout_below="@id/resetPassword"
        android:layout_alignEnd="@id/dont"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="14dp"
        android:layout_toEndOf="@+id/dont"
        android:text="click_here"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold|italic"

        />


</RelativeLayout>
